--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Orbitron', sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -21,4 +25,13 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.buttons {
+  width: 300px;
+  height: 200px;
+}
+
+.show-grid {
+  background-color: #f2f2f2;
 }
