--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,8 @@ p {
   color: #D4CB92;
   text-align: right;
   border-radius: 8px;
+  overflow: hidden;
+  direction: rtl;
 }
 
 .operation {
@@ -51,6 +53,7 @@ p {
   min-height: 10px;
   padding: 10px;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 
 .footer {
